蓝图使用和数据模型设计

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ flask = "*"
 requests = "*"
 werkzeug = "*"
 gunicorn = "*"
+wtforms = "*"
+flask-sqlalchemy = "*"
+cymysql = "*"
 
 [requires]
 python_version = "3.7"
