--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\virtualenvs\\fisher-U_AueEay\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\ttbug\\.virtualenvs\\fisher-U_AueEay\\Scripts\\python.exe"
 }
